--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:id="@+id/linear_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical" >
 
 
-        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
+        <RadioGroup
             android:id="@+id/radio_group"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -60,10 +60,12 @@
                 android:hint=""
                 android:text=""
                 android:inputType="number"/>
+
             <Button
                 android:id="@+id/button_id"
-                android:layout_height="wrap_content"
+                style="@style/myButtonStyle"
                 android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="Roll Dice" />
             <TextView
                 android:id="@+id/textView1"
@@ -71,6 +73,7 @@
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
                 android:layout_marginTop="50dp"
+                android:textSize="40dp"
                 android:layout_gravity="center"
                 android:text="" />
         </RadioGroup>
