--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,10 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+    <style name="myButtonStyle" parent="Widget.AppCompat.Button">
+        <item name="android:background">@color/green</item>
+        <item name="android:textSize">50sp</item>
+<!--        <item name="android:textColor">@color/black</item>-->
+
+    </style>
 </resources>
